--- a/Main.html
+++ b/Main.html
@@ -29,7 +29,7 @@
         </div>
         <div>
           <ul class="navbar-nav fw-bold" style="font-size: 20px;">
-            <li nav-item>
+            <li class="nav-item">
               <a class="nav-link" href="tel:+88003003000">Забронировать</a>
             </li>
           </ul>
@@ -66,6 +66,85 @@
           </li>
         </ul>
       </div>
+
+      <div class="card" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title"><u>Price-List__________________</u></h5>
+          <div class="price-time">
+            <div>
+              <p>1 час</p>
+              <p>3 часа</p>
+              <p>Ночь</p>
+            </div>
+            <div class="price-lk">
+              <p>190р</p>
+              <p>510р</p>
+              <p>600р</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <h1 class="h1" style="margin-top: 40px;">
+        Комплектующие_______
+      </h1>
+      <div>
+        <ul class="price">
+          <li class="price-s">
+            <button class="baton">
+              Standart
+            </button>
+          </li>
+          <li class="price-s">
+            <button class="baton">
+              Boot Camp
+            </button>
+          </li>
+          <li class="price-s">
+            <button class="baton">
+              VIP
+            </button>
+          </li>
+        </ul>
+      </div>
+
+      <div class="card card-2" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title"><u>Конфигурация___________</u></h5>
+          <div class="acesor">
+            <div style="text-decoration: underline;">
+              <p>Процессор</p>
+              <p class="card-text">Видеокарта</p>
+              <p class="card-text">Оперативная<br>память</p>
+            </div>
+            <div class="gso" style="text-decoration: underline;">
+              <p>Intel Core<br>i5-12400F</p>
+              <p>RTX <br>4060</p>
+              <p>16 GB<br>3200MHz</p>
+            </div>
+          </div>
+        </div>
+      </div>
   </div>
+  <footer class="podval">
+    <div class="kakoy-to-1">
+      <a>
+        <img src="Logo.png" alt="Logotip">
+      </a>
+    </div>
+    <div class="kakoy-to">
+      <ul class="pudge">
+        <li class="pudge-1">
+          <p>Связь с нами</p>
+        </li>
+        <li class="pudge-1">
+          <img style="width: 100px;" src="vk.png" alt="vk">
+        </li>
+        <li class="pudge-1">
+          <img style="width: 55px;" src="TG.png" alt="TG">
+        </li>
+      </ul>
+    </div>
+  </footer>
 </body>
 </html>
